--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
         "axios": "^0.21.1",
         "moment": "^2.29.1",
         "pino": "^6.13.1",
+        "core-js": "^3.8.3",
         "vue": "^2.6.14",
-        "vuetify": "^2.5.8",
+        "vuetify": "^2.6.0",
         "vuex": "^3.6.2",
         "vuex-router-sync": "^5.0.0"
     },
     "devDependencies": {
+        "@babel/core": "^7.12.16",
+        "@babel/eslint-parser": "^7.12.16",
         "@babel/parser": "^7.15.3",
         "@cucumber/cucumber": "^7.3.1",
         "@vue/cli-plugin-babel": "^5.0.1",
@@ -30,20 +33,16 @@
         "@vue/cli-plugin-unit-mocha": "^5.0.1",
         "@vue/cli-service": "^5.0.1",
         "@vue/test-utils": "^1.0.3",
-        "babel-eslint": "^10.1.0",
         "chai": "^4.1.2",
         "eslint": "^7.32.0",
-        "eslint-plugin-vue": "^7.17.0",
+        "eslint-plugin-vue": "^8.0.3",
         "jest": "^27.1.0",
-        "jest-puppeteer": "^5.0.4",
         "mime-types": "^2.1.32",
-        "playwright": "^1.14.1",
-        "puppeteer": "^13.4.0",
-        "sass": "^1.38.2",
-        "sass-loader": "^10",
+        "sass": "~1.32.0",
+        "sass-loader": "^10.0.0",
         "sinon": "^11.1.2",
         "sinon-chai": "^3.7.0",
-        "vue-cli-plugin-vuetify": "^2.4.2",
+        "vue-cli-plugin-vuetify": "~2.5.5",
         "vue-meta": "^2.4.0",
         "vue-router": "^3.5.2",
         "vue-template-compiler": "^2.6.14",
